test-env/test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-nodejs-app
  template:
    metadata:
      labels:
        app: test-nodejs-app
    spec:
      containers:
        - name: test-nodejs-app
          image: optimaltech/my-image-name
          ports:
            - containerPort: 3000
