test-env/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-svc
  namespace: test
spec:
  selector:
    app: test-nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
