test-env/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: test.optimalgtech.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-nodejs-svc
            port:
              number: 80
